# Mp3Recorder

./: .gitignore  LICENSE  MixRecorder.MD  PlayBackMusic.MD  README.MD  README.en.md  README.md  READ_AudioPlayer.md  Update_log.md  bintray.gradle  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  spotless.gradle
app/: build.gradle  build.gradle.kts  test.jks
buildSrc/: build.gradle.kts  settings.gradle.kts
recorder/src/main/java/: CMakeLists.txt
recorder/src/main/java/me/shetj/kt/: PlayerExt.kt  Recorder.kt  RecorderExt.kt
recorder/src/main/java/me/shetj/mixRecorder/: AudioDecoder.kt  MixEncodeThread.kt  MixRecorder.kt  PlayBackMusic.kt  PlayPCMMusic.kt  PlugConfigs.kt  ReadMixTask.kt  VolumeConfig.kt
recorder/src/main/java/me/shetj/player/: AudioPlayer.java  AudioPlayer.kt  AudioTrackManager.kt  AudioUtils.kt  PermissionListener.kt  PlayerListener.kt  RecordListener.kt  SimPlayerListener.kt  SimRecordListener.kt
recorder/src/main/java/me/shetj/recorder/: BaseRecorder.kt  DataEncodeThread.kt  MP3Recorder.kt  PCMFormat.kt  ReadTask.kt  RecordState.kt  Recorder.kt  RecorderExt.kt
recorder/src/main/java/me/shetj/recorder/mixRecorder/: AudioDecoder.kt  MixEncodeThread.kt  MixRecorder.kt  PlayBackMusic.kt  PlayPCMMusic.kt  ReadMixTask.kt
recorder/src/main/java/me/shetj/recorder/simRecorder/: BaseRecorder.kt  DataEncodeThread.kt  MP3Recorder.kt  PCMFormat.kt  RecordState.kt
recorder/src/main/java/me/shetj/recorder/util/: AudioUtils.kt  BytesTransUtil.kt  FileUtils.kt  LameUtils.kt  PlugConfigs.kt  VolumeConfig.kt
(+226 files in other folders)
